--- a/parser.service
+++ b/parser.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 User=USERNAME
 Group=USERNAME
-WorkingDirectory=/home/USERNAME/bb-freebet/
-ExecStart=/usr/bin/bash /home/USERNAME/bb-freebet/parser.sh /home/USERNAME/bb-freebet/profile
+WorkingDirectory=/usr/local/src/bb-freebet
+ExecStart=/usr/bin/bash /usr/local/src/bb-freebet/parser.sh
 Restart=on-failure
 KillMode=control-group
 
