--- a/client/freebet.service
+++ b/client/freebet.service
@@ -6,7 +6,7 @@ After=network.target
 User=USERNAME
 Group=USERNAME
 WorkingDirectory=/home/USERNAME/bb-freebet/
-ExecStart=/usr/bin/bash /home/USERNAME/bb-freebet/startup.sh /home/USERNAME/bb-freebet/profile
+ExecStart=/usr/bin/bash /home/USERNAME/bb-freebet/clean.sh && /home/USERNAME/bb-freebet/venv/bin/python3 /home/USERNAME/bb-freebet/chrome.py
 Restart=on-failure
 KillMode=control-group
 
